--- a/src/main/resources/META-INF/resources/home.xhtml
+++ b/src/main/resources/META-INF/resources/home.xhtml
@@ -88,7 +88,7 @@
 					  
 				<!-- Deletar Button -->
 		 		<h:form enctype="multipart/form-data">
-					<p:commandButton title="Deletar" icon="pi pi-times" action="#{homeMBean.deletarCollec(collec)}"
+					<p:commandButton title="Deletar" icon="pi pi-trash" action="#{homeMBean.deletarCollec(collec)}"
 					styleClass="rounded-button ui-button-danger ui-button-outlined">
 						 <p:confirm header="Confirmação" message="Deletar a coleção?"
                         icon="pi pi-exclamation-triangle" />
